example/comp.jj
PARSER_BEGIN(comp)
import java.util.ArrayList;
import java.util.List;

public class comp 
{
    private static Codigo c = new Codigo();
    
	public static void main( String[] args )throws ParseException
	{
		try
		{
			comp analizador = new comp( System.in ) ;
			analizador.Programa();
		}
		catch(ParseException e)
		{
			System.out.println(e.getMessage());
			System.out.println("Analizador: foram encontrados alguns erros na analise.");
		}
		for(String nome : c.codigoList){
            System.out.println(nome);
        }
	}
}

class Codigo
{
    public List<String> codigoList = new ArrayList<String>();
}
PARSER_END(comp)

SKIP : 
{ 
	" "|"\n"|"\r"|"\r\n" 
}

TOKEN:
{
	<COMENTARIO: "#"(LETTER,DIGIT)*"#">
	
}
TOKEN:
{
	<#LETTER: ["a"-"z","A"-"Z"]>
	<#DIGIT: ["0" - "9"]>
	
}
TOKEN:
{
    <IDENTIFICADOR: <LETTER>(<LETTER>|<DIGIT>|"_"])*> {System.out.print("IDENTIFICADOR -> "+image+"\r\n");}
    | <IGUAL: ("==")>{System.out.println("IGUAL -> "+image);}
}

void Programa() :
{}
{
	Linhas()<EOF>	
}
void Linhas():
{}
{
    (Igualdade())*
}
void Igualdade() :
{
    Token a, igual, b;
}
{
    a=<IDENTIFICADOR> {
        c.codigoList.add("Token: "+tokenImage[a.kind]+" // Palavra: "+a.toString());
    }
    igual=<IGUAL> {
        c.codigoList.add("Token: "+tokenImage[igual.kind]+" // Palavra: "+igual.toString());
    }
    b=<IDENTIFICADOR> {
        c.codigoList.add("Token: "+tokenImage[b.kind]+" // Palavra: "+b.toString());
    }
}

